--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      nodejs: 14
   pre_build:
     commands:
       - npm install
@@ -10,7 +13,5 @@ phases:
 
 artifacts:
   files:
-    - '**/*'
+    - "**/*"
   base-directory: build
-  discard-paths: no
-  
