--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,15 +3,16 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 14
-  pre_build:
+      nodejs: 14.x
     commands:
       - npm install
-    build:
-      commands:
-        - npm run build
+      - npm update
+  build:
+    commands:
+      - npm run build
 
 artifacts:
+  base-directory: ./build
   files:
-    - "**/*"
-  base-directory: build
+    - '**/*'
+  
