--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,13 +4,13 @@ phases:
   install:
     runtime-versions:
       nodejs: 14.x
+  pre_build:
     commands:
       - npm install
       - npm update
   build:
     commands:
       - npm run build
-
 artifacts:
   base-directory: ./build
   files:
